--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@dicebear/collection": "^7.0.4",
     "@dicebear/core": "^7.0.4",
     "expo": "~50.0.5",
+    "expo-checkbox": "~2.7.0",
     "expo-dev-client": "~3.3.8",
     "expo-status-bar": "~1.11.1",
     "firebase": "^10.8.0",
