--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react": "18.2.0",
     "react-native": "0.73.2",
     "react-native-dropdown-picker": "^5.4.6",
+    "react-native-dropdown-select-list": "^2.0.5",
+    "react-native-picker-select": "^9.0.1",
     "react-native-svg": "^14.1.0"
   },
   "devDependencies": {
