--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "@dicebear/collection": "^7.0.4",
     "@dicebear/core": "^7.0.4",
     "expo": "~50.0.5",
+    "expo-dev-client": "~3.3.8",
     "expo-status-bar": "~1.11.1",
+    "firebase": "^10.8.0",
     "react": "18.2.0",
     "react-native": "0.73.2",
-    "react-native-svg": "^14.1.0",
-    "expo-dev-client": "~3.3.8"
+    "react-native-svg": "^14.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
