--- a/package.json
+++ b/package.json
@@ -13,13 +13,17 @@
     "@dicebear/core": "^7.0.4",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.18",
+    "dotenv": "^16.4.4",
     "expo": "~50.0.5",
+    "expo-camera": "^14.0.5",
     "expo-checkbox": "^2.7.0",
     "expo-dev-client": "~3.3.8",
+    "expo-media-library": "^15.9.1",
     "expo-status-bar": "~1.11.1",
     "firebase": "^10.8.0",
     "react": "18.2.0",
     "react-native": "0.73.2",
+    "react-native-dotenv": "^3.4.10",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-svg": "^14.1.0"
