--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "expo-camera": "^14.0.5",
     "expo-checkbox": "^2.7.0",
     "expo-dev-client": "~3.3.8",
+    "expo-device": "^5.9.3",
     "expo-media-library": "^15.9.1",
+    "expo-notifications": "^0.27.6",
     "expo-status-bar": "~1.11.1",
     "firebase": "^10.8.0",
     "react": "18.2.0",
@@ -26,7 +28,8 @@
     "react-native-dotenv": "^3.4.10",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "react-native-svg": "^14.1.0"
+    "react-native-svg": "^14.1.0",
+    "@react-native-async-storage/async-storage": "1.21.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
