--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@dicebear/collection": "^7.0.5",
     "@dicebear/core": "^7.0.5",
     "@expo/vector-icons": "^13.0.0",
+    "@react-native-picker/picker": "^2.6.1",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.18",
     "expo-camera": "^14.0.5",
