--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "expo-dev-client": "~3.3.8",
     "expo-media-library": "^15.9.1",
     "firebase": "^10.8.0",
+    "formik": "^2.4.5",
     "react-native-dotenv": "^3.4.10",
+    "react-native-dropdown-select-list": "^2.0.5",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
     "react-native-svg": "^14.1.0"
