--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "alpha",
+    "name": "FamilyQuest",
     "slug": "alpha",
     "version": "1.0.0",
     "orientation": "portrait",
