--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "alpha",
   "version": "1.0.0",
   "description": "",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios"
   },
   "author": "",
   "license": "ISC",
@@ -15,6 +17,7 @@
     "@react-native-picker/picker": "^2.6.1",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.18",
+    "expo": "^50.0.14",
     "expo-camera": "^14.0.5",
     "expo-checkbox": "^2.7.0",
     "expo-dev-client": "~3.3.8",
@@ -25,6 +28,12 @@
     "react-native-dropdown-select-list": "^2.0.5",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
-    "react-native-svg": "^14.1.0"
+    "react-native-svg": "^14.1.0",
+    "expo-status-bar": "~1.11.1",
+    "react": "18.2.0",
+    "react-native": "0.73.6"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.20.0"
   }
 }
